--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <div class="row" data-aos="fade-up">
             <div class="col-full">
                 <p class="lead">
-                 WELCOME TO OUR 2019 CUSTOM BALL PROGRAM. We have created a virtual design studio with the player in mind. OUR CUSTOM PROGRAM IS THE GOLD STANDARD OF DESIGN IN THE SPORTS INDUSTRY. WE OFFER, HIGH QUALITY, STATE-OF-THE-ART DESIGNS THAT WILL MEET YOUR NEEDS TO BRAND YOUR CLUB.
+                 Welcome to the  2019 custom ball program. We have created a virtual design studio with the player in mind. Our custom program is the gold standard of design in the sports industry. We offer, high quality, state-of-the-art designs that will meet your needs to brand your club.
                 </p>
             </div>
         </div> <!-- end about-desc -->
